tests and metrics in gradle build